feat: add script task feature & code optimization
